# DSSNav

./: README.md  dockerfile
catkin_ws/: env_setup.sh  start_simulation.sh  start_simulation_hospital.sh
catkin_ws/launch/: gazebo_sim_tracer.launch  gazebo_sim_turtlebot3.launch  spawn_turtlebot.launch
catkin_ws/map/: PGM2map.py  map.pgm  map.yaml  test.pgm  test.yaml
catkin_ws/src/aws-robomaker-hospital-world/worlds/: hospital.world  hospital_no_stand_people.world  right_turn.world
catkin_ws/src/my_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/my_navigation/launch/: move_base.launch  move_base_trace.launch
catkin_ws/src/my_navigation/param/: costmap_common_params_trace.yaml  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle_pi.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
catkin_ws/src/my_turtlebot3_description/: CMakeLists.txt  package.xml
catkin_ws/src/my_turtlebot3_description/urdf/: turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro
catkin_ws/src/navigation/costmap_2d/plugins/: obstacle_layer.cpp
catkin_ws/src/navigation/dwa_local_planner/src/: dwa_planner_ros.cpp
catkin_ws/src/social_rules_selector/: CMakeLists.txt  package.xml  plugin_description.xml
catkin_ws/src/social_rules_selector/launch/: social_rule.launch
catkin_ws/src/social_rules_selector/msg/: PredictTraj.msg  PredictTrajs.msg  SocialRule.msg  TrackedGroup.msg
catkin_ws/src/social_rules_selector/scripts/: CVM.py  clear_on_new_goal.py  human_filter.py  log_analyzer.py  path_plot.py  path_recorder.py  predict_trajectory_node.py  publish_dynamic_obstacles.py  social_relation.py  social_rule_selector_node.py  social_rule_selector_node_test.py  test_obstacle_publisher.py  tracked_groups.py
catkin_ws/src/teb_local_planner/src/: teb_local_planner_ros.cpp
catkin_ws/src/ultralytics_ros/: CMakeLists.txt  package.xml
catkin_ws/src/ultralytics_ros/cfg/: my_track_config.yaml
catkin_ws/src/ultralytics_ros/include/tracker_with_cloud_node/: my_tracker_with_cloud_node.h
catkin_ws/src/ultralytics_ros/launch/: my_tracker_with_cloud.launch
catkin_ws/src/ultralytics_ros/msg/: BBox2D.msg  BBox2DArray.msg  Det3D.msg  Det3DArray.msg  MyYoloResult.msg  Trk3D.msg  Trk3DArray.msg
catkin_ws/src/ultralytics_ros/rviz/: my.rviz  turtlebot3.rviz
catkin_ws/src/ultralytics_ros/script/: kalman_tracker.py  my_tracker_node.py  trans_frame_node.py
catkin_ws/src/ultralytics_ros/src/: my_tracker_with_cloud_node.cpp
(+106 files in other folders)
